# maintainer-copilot

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: bug_windows_startup.md  enhancement_config_rules.md  incomplete_report_needs_info.md  question_label_usage.md  sample_issue.md
src/maintainer_copilot/: cli.py  triage.py
src/maintainer_copilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_triage.py
