[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maintainer-copilot"
version = "0.1.0"
description = "Minimal OSS maintainer issue triage CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
]

[project.scripts]
mcopilot = "maintainer_copilot.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
